--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,8 +1,8 @@
-- title: About
-  url: /about.html
+- title: Gabriel Jones Site
+  url: https://gabrieljones.it
 
-- title: Source
-  url: https://github.com/patdryburgh/hitchens
+- title: Onlygabbyme
+  url: https://onlygabbyme.it
 
-- title: Designer
-  url: http://patdryburgh.com
+- title: feed
+  url: https://feed.blog.gabrieljones.it/
