--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,16 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Hitchens
-email: hello@patdryburgh.com
+title: Gabriel Jones
+email: gabriel.jones@18f.it
 description: >- # this means to ignore newlines until "baseurl:"
-  An inarguably well-designed Jekyll theme.
+  I bibliotecari sono gli architetti del sapere, dove ogni libro è una porta e ogni ricerca un viaggio.
 baseurl: "/hitchens" # the subpath of your site, e.g. /blog
-url: "https://patdryburgh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://blog.gabrieljones.it" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/icon-512.png
-twitter_username: patdryburgh
-github_username:  patdryburgh
+twitter_username: gabrieljonesdev
+github_username:  gabrieljonesdev
+instagram_username:  gabrieljonesdev
 
 # Build settings
 markdown: kramdown
